--- a/.github/workflows/io-actions.yml
+++ b/.github/workflows/io-actions.yml
@@ -22,6 +22,10 @@ jobs:
     - run: git checkout HEAD^2
       if: ${{ github.event_name == 'pull_request' }}
     
+    - name: Public IP
+      id: ip
+      uses: haythem/public-ip@v1.2
+    
     #IO SETUP is required for devsecops persona. Can be ignored if onboarding is done through CURL or Postman 
     - name: IO Setup
       env:
