Developer Persona - Major Release

--- a/.github/workflows/io-actions.yml
+++ b/.github/workflows/io-actions.yml
@@ -44,7 +44,7 @@ jobs:
         workflowServerUrl: ${{secrets.WORKFLOW_SERVER_URL}}
         workflowVersion: 2021.6.0
         manifestType: json
-        additionalWorkflowArgs: --persona=developer --release.type=minor --polaris.url=${{secrets.POLARIS_SERVER_URL}} --polaris.token=${{secrets.POLARIS_ACCESS_TOKEN}} 
+        additionalWorkflowArgs: --persona=developer --release.type=major --polaris.url=${{secrets.POLARIS_SERVER_URL}} --polaris.token=${{secrets.POLARIS_ACCESS_TOKEN}} 
         stage: "IO"
     
     # Please note that the ID in previous step was set to prescription
