--- a/io-manifest.json
+++ b/io-manifest.json
@@ -1,17 +1,6 @@
 {
    "application": {
-      "appId": "devsecops-test/github-io-sample",
-      "assetId": "devsecops-test/github-io-sample",
-      "appType": "Webapp",
-      "release": "<<RELEASE_TYPE>>",
-      "microservice": false,
-      "projectLanguage": "Java",
-      "platformVersion": "Java 8",
-      "buildSystem": "Maven",
-      "riskMatrixRevision": "Rev1.0",
-      "sourceFilePattern": ".*\\+\\+\\+.*(\\.java|\\.jsp)+.*",
-      "sensitivePackagePattern": "<<SENSITIVE_PACKAGE_PATTERN>>",
-      "fileChangeThreshold": "<<FILE_CHANGE_THRESHOLD>>"
+      "projectName": "devsecops-test/github-io-sample"
    },
    "environment": {
       "scm": "<<SCM_TYPE>>",
