--- a/.github/workflows/io-actions.yml
+++ b/.github/workflows/io-actions.yml
@@ -25,7 +25,7 @@ jobs:
     #IO SETUP is required for devsecops persona. Can be ignored if onboarding is done through CURL or Postman 
     - name: IO Setup
       env:
-          workflow_version: 2021.8.1
+          workflow_version: 2021.10.0
           manifest_type: json
           asset_id: devsecops-test/github-io-sample
           calculator_meta_path: io_calculator_metadata.json
@@ -38,7 +38,7 @@ jobs:
     
     - name: Synopsys Intelligent Security Scan
       id: prescription
-      uses: synopsys-sig/intelligent-security-scan@47d5f5e93a271258ca360499e405a083bc0f3a76
+      uses: synopsys-sig/intelligent-security-scan@2021.10.0
       env:
         persona: developer
         release_type: minor
@@ -46,7 +46,7 @@ jobs:
         ioServerUrl: ${{secrets.IO_SERVER_URL}}
         ioServerToken: ${{secrets.IO_SERVER_TOKEN}}
         workflowServerUrl: ${{secrets.WORKFLOW_SERVER_URL}}
-        workflowVersion: 2021.8.1
+        workflowVersion: 2021.10.0
         manifestType: json
         additionalWorkflowArgs: --persona=$persona --release.type=$release_type --polaris.url=${{secrets.POLARIS_SERVER_URL}} --polaris.token=${{secrets.POLARIS_ACCESS_TOKEN}} 
         stage: "IO"
@@ -73,7 +73,7 @@ jobs:
     
     - name: Synopsys Intelligent Security Scan
       if: ${{ steps.prescription.outputs.sastScan == 'true' || steps.prescription.outputs.scaScan == 'true' }}
-      uses: synopsys-sig/intelligent-security-scan@47d5f5e93a271258ca360499e405a083bc0f3a76
+      uses: synopsys-sig/intelligent-security-scan@2021.10.0
       env:
         persona: developer
         release_type: minor
@@ -81,7 +81,7 @@ jobs:
         ioServerUrl: ${{secrets.IO_SERVER_URL}}
         ioServerToken: ${{secrets.IO_SERVER_TOKEN}}
         workflowServerUrl: ${{secrets.WORKFLOW_SERVER_URL}}
-        workflowVersion: 2021.8.1
+        workflowVersion: 2021.10.0
         manifestType: json
         additionalWorkflowArgs: --persona=$persona --slack.channel.id=C015LGE7RRQ --slack.token=${{secrets.ORG_SLACK_TOKEN}} 
                 --jira.project.name=STAR --jira.assignee="Rahul Gunasekaran" --jira.api.url=https://rahulguna.atlassian.net --jira.username=rahulguna10@gmail.com --jira.auth.token=${{secrets.JIRA_TOKEN}}
