--- a/.github/workflows/io-actions.yml
+++ b/.github/workflows/io-actions.yml
@@ -40,7 +40,7 @@ jobs:
       id: prescription
       uses: synopsys-sig/intelligent-security-scan@2021.10.0
       env:
-        persona: developer
+        persona: devsecops
         release_type: minor
       with:
         ioServerUrl: ${{secrets.IO_SERVER_URL}}
@@ -48,7 +48,7 @@ jobs:
         workflowServerUrl: ${{secrets.WORKFLOW_SERVER_URL}}
         workflowVersion: 2021.10.0
         manifestType: json
-        additionalWorkflowArgs: --persona=$persona --release.type=minor --polaris.url=${{secrets.POLARIS_SERVER_URL}} --polaris.token=${{secrets.POLARIS_ACCESS_TOKEN}} 
+        additionalWorkflowArgs: --persona=$persona --release.type=$release_type --polaris.url=${{secrets.POLARIS_SERVER_URL}} --polaris.token=${{secrets.POLARIS_ACCESS_TOKEN}} 
         stage: "IO"
     
     # Please note that the ID in previous step was set to prescription
@@ -75,7 +75,7 @@ jobs:
       if: ${{ steps.prescription.outputs.sastScan == 'true' || steps.prescription.outputs.scaScan == 'true' }}
       uses: synopsys-sig/intelligent-security-scan@2021.10.0
       env:
-        persona: developer
+        persona: devsecops
         release_type: minor
       with:
         ioServerUrl: ${{secrets.IO_SERVER_URL}}
