--- a/.github/workflows/io-actions.yml
+++ b/.github/workflows/io-actions.yml
@@ -3,6 +3,8 @@ name: "Synopsys Intelligent Security Scan"
 on:
   push:
     branches: [ master ]
+  pull_request:
+    branches: [ master ]
 
 jobs:
   analyze:
