--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -5,6 +5,7 @@ jdbc.driverClassName=org.hsqldb.jdbcDriver
 jdbc.url=jdbc:hsqldb:mem:insecure-bank;sql.syntax_pgs=true
 jdbc.username=SA
 jdbc.password=
+# no changes just testing
 
 # Properties that control the population of schema and data for a new data source
 jdbc.initLocation=classpath:db/schema.sql
