--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,11 +11,20 @@ pool:
 
 steps:
 - task: Bash@3
+  name: 'Initial_Stage'
+  inputs:
+    targetType: 'inline'
+    script: |
+       echo "Welcome to IO"
+
+- task: Bash@3
   name: 'Synopsys_Intelligent_Security_Scan_Stage_IO'
   inputs:
     targetType: 'inline'
     script: |
        echo "Trigger IO"
+       wget "https://raw.githubusercontent.com/synopsys-sig/io-artifacts/2021.12.0-alpha-2/prescription.sh"
+       chmod +x prescription.sh
        ./prescription.sh \ 
         --stage="IO" \
         --io.url=$IO_SERVER_URL \
