Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,6 +14,8 @@ variables:
   value: http://23.99.131.170/api/ioiq
 - name: WORKFLOW_ENGINE_SERVER_URL
   value: http://23.99.131.170/api/workflowengine
+- name: PERSONA
+  value: devsecops
 
 steps:
 - task: Bash@3
@@ -31,7 +33,7 @@ steps:
        echo "Trigger IO"
        wget "https://raw.githubusercontent.com/synopsys-sig/io-artifacts/2021.12.0-alpha-2/prescription.sh"
        chmod +x prescription.sh
-       ./prescription.sh --release.type="major" --persona="devsecops" --stage="IO" --io.url="$(IO_SERVER_URL)" --io.token="$(IO_ACCESS_TOKEN)" --workflow.url="$(WORKFLOW_ENGINE_SERVER_URL)" \
+       ./prescription.sh --release.type="major" --persona="$(PERSONA)" --stage="IO" --io.url="$(IO_SERVER_URL)" --io.token="$(IO_ACCESS_TOKEN)" --workflow.url="$(WORKFLOW_ENGINE_SERVER_URL)" \
         --asset.id="devsecops-test/github-io-sample" --scm.type="github" --scm.owner="devsecops-test" --scm.repo.name="github-io-sample" --scm.branch.name="master" \
         ${ADDITIONALARGS}
        export IS_SAST_ENABLED=$(jq -r '.security.activities.sast.enabled' result.json)
@@ -43,7 +45,7 @@ steps:
        echo "================================== IO Prescription ======================================="
        echo "Is SAST Enabled - ${IS_SAST_ENABLED}"
        echo "Is SCA Enabled - ${IS_SCA_ENABLED}"
-       if [ $PERSONA == "devsecops" ]; then
+       if [ "$(PERSONA)" == "devsecops" ]; then
           echo "==================================== IO Risk Score ======================================="
           echo "Buisness Criticality Score - $(jq -r '.riskScoreCard.bizCriticalityScore' result.json)"
           echo "Data Class Score - $(jq -r '.riskScoreCard.dataClassScore' result.json)"
