--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -40,6 +40,8 @@ steps:
        export IS_SCA_ENABLED=$(jq -r '.security.activities.sca.enabled' result.json)
        echo "IS_SAST_ENABLED=${IS_SAST_ENABLED}" >> scans.env
        echo "IS_SCA_ENABLED=${IS_SCA_ENABLED}" >> scans.env
+       echo "##vso[task.setvariable variable=IS_SAST_ENABLED]$(jq -r '.security.activities.sast.enabled' result.json)"
+       echo "##vso[task.setvariable variable=IS_SCA_ENABLED]$(jq -r '.security.activities.sca.enabled' result.json)"
        rm -rf synopsys-io.yml
        rm -rf synopsys-io.json
        echo "================================== IO Prescription ======================================="
