--- a/.github/workflows/io-actions.yml
+++ b/.github/workflows/io-actions.yml
@@ -1,8 +1,8 @@
 name: "Synopsys Intelligent Security Scan"
 
 on:
-  push:
-    branches: [ master ]
+  #push:
+  #  branches: [ master ]
   pull_request:
     branches: [ master ]
 
