--- a/.github/workflows/io-actions.yml
+++ b/.github/workflows/io-actions.yml
@@ -1,8 +1,8 @@
 name: "Synopsys Intelligent Security Scan"
 
 on:
-  #push:
-  #  branches: [ master ]
+  push:
+    branches: [ master ]
   pull_request:
     branches: [ master ]
 
@@ -24,23 +24,9 @@ jobs:
     - run: git checkout HEAD^2
       if: ${{ github.event_name == 'pull_request' }}
     
-    #IO SETUP is required for devsecops persona. Can be ignored if onboarding is done through CURL or Postman 
-    #- name: IO Setup
-    #  env:
-    #      workflow_version: 2021.10.0
-    #      manifest_type: json
-    #      asset_id: devsecops-test/github-io-sample
-    #      calculator_meta_path: io_calculator_metadata.json
-    #      tpi_path: io-tpi.json
-    #  run: |
-    #      wget "https://raw.githubusercontent.com/synopsys-sig/io-artifacts/${workflow_version}/io_onboarding.sh"
-    #      sed -i -e 's/\r$//' io_onboarding.sh
-    #      chmod +x io_onboarding.sh
-    #      ./io_onboarding.sh --io.url=${{secrets.IO_SERVER_URL}} --io.token=${{secrets.IO_SERVER_TOKEN}} --asset.id=$asset_id --tpi.path=$tpi_path --calculator.meta.path=$calculator_meta_path --manifest.type=$manifest_type --workflow.version=$workflow_version
-    
     - name: Synopsys Intelligent Security Scan
       id: prescription
-      uses: synopsys-sig/intelligent-security-scan@2021.10.0
+      uses: synopsys-sig/intelligent-security-scan@2021.12.0-alpha
       env:
         persona: developer
         release_type: minor
@@ -48,7 +34,7 @@ jobs:
         ioServerUrl: ${{secrets.IO_SERVER_URL}}
         ioServerToken: ${{secrets.IO_SERVER_TOKEN}}
         workflowServerUrl: ${{secrets.WORKFLOW_SERVER_URL}}
-        workflowVersion: 2021.10.0
+        workflowVersion: 2021.12.0-alpha-2
         manifestType: json
         additionalWorkflowArgs: --persona=$persona --release.type=$release_type --polaris.url=${{secrets.POLARIS_SERVER_URL}} --polaris.token=${{secrets.POLARIS_ACCESS_TOKEN}} 
         stage: "IO"
@@ -75,7 +61,7 @@ jobs:
     
     - name: Synopsys Intelligent Security Scan
       if: ${{ steps.prescription.outputs.sastScan == 'true' || steps.prescription.outputs.scaScan == 'true' }}
-      uses: synopsys-sig/intelligent-security-scan@2021.10.0
+      uses: synopsys-sig/intelligent-security-scan@2021.12.0-alpha
       env:
         persona: developer
         release_type: minor
@@ -83,7 +69,7 @@ jobs:
         ioServerUrl: ${{secrets.IO_SERVER_URL}}
         ioServerToken: ${{secrets.IO_SERVER_TOKEN}}
         workflowServerUrl: ${{secrets.WORKFLOW_SERVER_URL}}
-        workflowVersion: 2021.10.0
+        workflowVersion: 2021.12.0-alpha-2
         manifestType: json
         additionalWorkflowArgs: --persona=$persona --slack.channel.id=C015LGE7RRQ --slack.token=${{secrets.ORG_SLACK_TOKEN}} 
                 --jira.project.name=STAR --jira.assignee="Rahul Gunasekaran" --jira.api.url=https://rahulguna.atlassian.net --jira.username=rahulguna10@gmail.com --jira.auth.token=${{secrets.JIRA_TOKEN}}
