--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,16 +8,12 @@ jobs:
       vmImage: ubuntu-latest
 
     variables:
-    - name: PERSONA
-      value: developer
-    - name: RELEASE
-      value: minor
-    - name: MANIFEST_TYPE
-      value: yml
-    - name: BD_PROJECT_NAME        
-      value: "devsecops-test/github-io-sample"
-    - name: BLACKDUCK_PROJECT_VERSION
-      value: 1.0
+      PERSONA: developer
+      RELEASE: minor
+      MANIFEST_TYPE: yml
+      BD_PROJECT_NAME: "devsecops-test/github-io-sample"
+      BLACKDUCK_PROJECT_VERSION: 1.0
+      SYNOPSYS_AZURE_TOOLS_REPO: https://github.com/synopsys-sig-community/synopsys-azure-tools
 
     steps:
     - task: Bash@3
@@ -62,11 +58,6 @@ jobs:
       inputs:
         targetType: 'inline'
         script: |
-          # Write your commands here
-          #if [ "$(IS_SAST_ENABLED)" = "x" ] || [ "$(IS_SAST_ENABLED)" = "false" ] || [ "$(IS_SAST_ENABLED)" = "null" ]; then
-          #    echo "SAST Scanning is disabled."
-          #    exit 0
-          #fi
           export POLARIS_SERVER_URL=$(POLARIS_SERVER_URL)
           export POLARIS_ACCESS_TOKEN=$(POLARIS_ACCESS_TOKEN)
           wget -q $(POLARIS_SERVER_URL)/api/tools/polaris_cli-linux64.zip
@@ -79,11 +70,6 @@ jobs:
       inputs:
         targetType: 'inline'
         script: |
-          # Write your commands here
-          #if [ "$(IS_SCA_ENABLED)" = "x" ] || [ "$(IS_SCA_ENABLED)" = "false" ] || [ "$(IS_SCA_ENABLED)" = "null" ]; then
-          #    echo "SCA Scanning is disabled."
-          #    exit 0
-          #fi
           pwd && wget "https://detect.synopsys.com/detect.sh" && chmod +x detect.sh
           ./detect.sh --blackduck.url="$(BLACKDUCK_SERVER_URL)" --blackduck.api.token="$(BLACKDUCK_ACCESS_TOKEN)" \
             --detect.tools="SIGNATURE_SCAN,DETECTOR" --detect.project.name="$(BD_PROJECT_NAME)" --detect.project.version.name="$(BLACKDUCK_PROJECT_VERSION)" \
@@ -91,6 +77,7 @@ jobs:
 
     - task: Bash@3
       name: 'Synopsys_Intelligent_Security_Scan_Stage_WORKFLOW'
+      condition: or(eq(variables['IS_SAST_ENABLED'], 'true'), eq(variables['IS_SCA_ENABLED'], 'true'))
       inputs:
         targetType: 'inline'
         script: |
@@ -115,13 +102,39 @@ jobs:
 
     - task: CopyFiles@2
       name: 'Copy_Sarif_Report'
+      condition: eq(variables['IS_SAST_ENABLED'], 'true')
       inputs:
         Contents: 'workflowengine-results.sarif'
         TargetFolder: '$(Build.ArtifactStagingDirectory)'
 
     - task: PublishBuildArtifacts@1
       name: 'Publish_Sarif_Report'
+      condition: eq(variables['IS_SAST_ENABLED'], 'true')
       inputs:
         PathtoPublish: '$(Build.ArtifactStagingDirectory)'
         ArtifactName: 'CodeAnalysisLogs'
         publishLocation: 'Container'
+        
+    - task: UsePythonVersion@0
+        displayName: Get Python Interpreter
+        inputs:
+          versionSpec: '3.7'
+          addToPath: true
+        name: pyTools
+        # Set up Python if it is master or a pull request
+        condition: or(eq(variables['Build.SourceBranchName'], 'main'), eq(variables['Build.Reason'], 'PullRequest'))
+
+      - script: $(pyTools.pythonLocation)/bin/pip install --upgrade pandas requests jsonapi_requests azure-devops
+        displayName: Install Python Module Dependencies
+        condition: or(eq(variables['Build.SourceBranchName'], 'main'), eq(variables['Build.Reason'], 'PullRequest'))
+
+      - script: |
+            git clone -q --depth 1 $SYNOPSYS_AZURE_TOOLS_REPO
+            $(pyTools.pythonLocation)/bin/python synopsys-azure-tools/azure-polaris-issues-tool.py --url $POLARIS_URL --token $POLARIS_ACCESS_TOKEN --new --az-work-items --project "sig-devsecops/github-io-sample" --branch "origin/master"
+        displayName: Create Work Items for New Issues
+        # Only create work items for pushes to a main branch
+        condition: eq(variables['Build.SourceBranchName'], 'main')
+        env:
+          SYSTEM_ACCESSTOKEN: $(System.AccessToken)
+          POLARIS_URL: $(POLARIS_URL)
+          POLARIS_ACCESS_TOKEN: $(POLARIS_ACCESS_TOKEN)
